--- a/project-origin/public/css/app.css
+++ b/project-origin/public/css/app.css
@@ -1,5 +1,104 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+input[type=file] {
+  opacity: 0;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.filezone {
+  outline: 2px dashed grey;
+  outline-offset: -10px;
+  background: #ccc;
+  color: dimgray;
+  padding: 10px 10px;
+  min-height: 200px;
+  position: relative;
+  cursor: pointer;
+  width: 200px;
+  margin: auto;
+}
+
+.filezone:hover {
+  background: #c0c0c0;
+}
+
+.filezone .file-listing {
+  padding: 0;
+}
+
+.filezone .file-listing img {
+  width: 100%;
+  height: 100%;
+}
+
+.filezone p {
+  font-size: 1.2em;
+  text-align: center;
+  padding: 50px 50px 50px 50px;
+}
+
+div.file-listing img {
+  max-width: 100%;
+}
+
+div.file-listing {
+  margin: auto;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+div.file-listing img {
+  height: 100px;
+}
+
+div.success-container {
+  text-align: center;
+  color: green;
+}
+
+div.remove-container {
+  text-align: center;
+}
+
+div.remove-container a {
+  color: red;
+  cursor: pointer;
+}
+
+a.submit-button {
+  display: block;
+  margin: auto;
+  text-align: center;
+  width: 200px;
+  padding: 10px;
+  text-transform: uppercase;
+  background-color: #CCC;
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+a.profile-button {
+  display: block;
+  margin: auto;
+  text-align: center;
+  width: 200px;
+  padding: 10px;
+  text-transform: uppercase;
+  background-color: #CCC;
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.profile-photo {
+  width: 200px;
+  height: 200px;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -10653,6 +10752,60 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+html,
+body,
+.app {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+.app {
+  display: flex;
+  overflow: hidden;
+  justify-content: right;
+  flex-direction: column;
+}
+
+.app > nav {
+  overflow: visible;
+}
+
+.app > * {
+  flex: 0 0 auto;
+  overflow: scroll;
+}
+
+.app > .navbar-laravel,
+.app > .content-footer {
+  height: 50px;
+  border: 1px solid #ccc;
+}
+
+.app > .content {
+  flex: 1 1 auto;
+  display: flex;
+  overflow: hidden;
+  justify-content: right;
+}
+
+.app > .content > * {
+  flex: 0 0 auto;
+  overflow: scroll;
+}
+
+.app > .content > .content-left,
+.app > .content > .content-right {
+  width: 250px;
+  border: 1px solid #ccc;
+}
+
+.app > .content > .content-center {
+  flex: 1 1 auto;
 }
 
 .navbar-laravel {
